01-secure-ish/k8s/namespaces/tflab/alpine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpine
  labels:
    app: alpine
  namespace: tflab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpine
  template:
    metadata:
      labels:
        app: alpine
    spec:
      containers:
      - image: jonpulsifer/alpine:tflab
        command: ["tail", "-f", "/dev/null"]
        name: alpine
