01-secure-ish/k8s/namespaces/tflab/sudo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sudo
  labels:
    app: sudo
  namespace: tflab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sudo
  template:
    metadata:
      labels:
        app: sudo
    spec:
      containers:
        - image: jonpulsifer/tflab:sudo
          command: ["tail", "-f", "/dev/null"]
          name: sudo
