01-secure-ish/k8s/namespaces/tflab/webapp-svc-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: tflab
  labels:
    app: webapp
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: webapp

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  labels:
    app: webapp
  namespace: tflab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      serviceAccountName: webapp
      containers:
      - image: jonpulsifer/webapp:tflab
        name: webapp
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 30
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 30
        ports:
        - containerPort: 8080
          protocol: TCP
