01-secure-ish/k8s/namespaces/tflab/webapp-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: tflab
spec:
  # select all pods
  podSelector:
    matchLabels: {}
  # block ingress and egress
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webapp
  namespace: tflab
spec:
  egress:
  - {}
  ingress:
  - from:
    ports:
    - port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: webapp
  policyTypes:
  - Ingress
  - Egress
